--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 100vmin;
   pointer-events: none;
 }
 
@@ -43,11 +43,11 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 20vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
   font-size: calc(10px + 2vmin);
   color: white;
 }
