added slide functionality

--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,37 @@
     transform: rotate(360deg);
   }
 }
+.button {
+  background-color: #4CAF50;
+  border-radius: 8px;
+  padding: 14px 40px;
+  color: white;
+  border: 2px solid #4CAF50; /* Green */
+}
+.button:hover {
+  background-color: white; /* Green */
+  color: #4CAF50;
+}
+
+.popup {  
+  position: fixed;  
+  width: 50%;  
+  height: 20%;  
+  border-radius: 8px;
+  top: 0;  
+  left: 0;  
+  right: 0;  
+  bottom: 0;  
+  margin: auto;  
+  background-color:#4CAF50 ;  
+}  
+.popup\_inner {  
+  position: absolute;  
+  left: 25%;  
+  right: 25%;  
+  top: 25%;  
+  bottom: 25%;  
+  margin: auto;  
+  border-radius: 20px;  
+  background: white;  
+}
